tests/reject/unbalanced.alg
sort Error = {empty_error;
